@@ -77,6 +77,8 @@ Version 2.0-dev (CVS)
 - Improved support for OGR date/time types. New Read/Write methods (bug 1948)
   Added support of OGR date/time types for MIF features.
 
+- C API: Added mitab_c_get_table_class() (bug 1957)
+
 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -939,5 +941,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.224 2008-11-27 20:50:22 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.225 2008-12-15 20:54:41 aboudreault Exp $
 ------------
